2010-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ScriptObject.cs: Make sure we don't leak exceptions to native code. The
	previous code was safe, but the gendarme rule for this didn't understand it
	and reported it as unsafe.

2010-07-06  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlPage.cs: Add NavigationState setter and an helper method,
	EnsureHistoryIframePresence, for SilverlightHost

2010-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlPage.cs: Add helper method for S.W.dll to initialize the 
	default value for SilverlightHost.NavigationState property

2010-05-31  Andreia Gaita  <avidigal@novell.com>

	* HtmlElement.cs: make the style attribute setter and getter to use
	  the javascript-exposed style properties instead of the dom, seems
	  to be what SL is using. (fixes drt 981)

2010-05-27  Alan McGovern  <amcgovern@novell.com>

	* ScriptObject.cs: Add the last missing lock to see if that'll
	  fix the random moonunit hangs.

2010-05-27  Andreia Gaita  <avidigal@novell.com>

	* HtmlElement.cs: reverting SetStyleAttribute fix, it breaks moonunit
	  rendering. I guess it's not supposed to work :P

2010-05-26  Andreia Gaita  <avidigal@novell.com>

	fixes for drt 981

	* HtmlDocument.cs: fix DocumentElement
	* HtmlElement.cs: Implement RemoveStyleAttribute, fix
	  (Set|Get)StyleAttribute
	* ScriptObject.cs: Implement SetProperty

2010-05-26  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: Add needed locks

2010-05-24  Andreia Gaita  <avidigal@novell.com>

	* ScriptObject.cs: Add a weak reference object cache for all script
	  objects so there's only one object per handle (drt 981)

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* ScriptObject.cs (GetPropertyInternal<V>): don't leak Values.
	(SetPropertyInternal): same.
	(InvokeInternal<T>): same.

2010-05-04  Jeffrey Stedfast  <fejj@novell.com>

	* HtmlPage.cs (.ctor): Don't call
	moonlight_scriptable_object_register() with a null PluginHost.
